--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,7 @@
   <div>
     For hot module reloading run
     <pre>npm run start:hmr</pre>
+    <mdl-icon>android</mdl-icon>
   </div>
 
   <hr>
@@ -25,7 +26,7 @@
         placeholder="Submit Local State to App State"
         autofocus>
 
-      <button md-raised-button color="primary">Submit Value</button>
+      <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Submit Value</button>
     </form>
     <!--
         <input type="text" [value]="localState.value" (input)="localState.value = $event.target.value" autofocus>
