--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,5 +1,10 @@
 <mdl-list>
-  <mdl-list-item *ngFor="let category of categories">
+  <mdl-list-item>
+    <mdl-list-item-primary-content mdl-shadow='2'>
+      <mdl-textfield autofocus type="text" [(ngModel)]="searchTerm" icon="search" style="margin-left: 10px;"></mdl-textfield>
+    </mdl-list-item-primary-content>
+  </mdl-list-item>
+  <mdl-list-item *ngFor="let category of categories | filterCategories: searchTerm">
     <mdl-list-item-primary-content>
       {{ category.name | removedashes | capitalize }}
     </mdl-list-item-primary-content>
